--- a/pom.xml
+++ b/pom.xml
@@ -5,16 +5,9 @@
 	<parent>
 		<groupId>com.ocrespo</groupId>
 		<artifactId>spring-parent</artifactId>
-		<version>1.1.0-20250323.210715</version>
+		<version>1.1.0-20250323.230835</version>
 		<relativePath/>
 	</parent>
-
-	<repositories>
-		<repository>
-			<id>ocrespo-repo</id>
-			<url>https://nexus.ocrespo.com/repository/maven</url>
-		</repository>
-	</repositories>
 
 	<groupId>com.ocrespo.di</groupId>
 	<artifactId>meal-track</artifactId>
@@ -105,5 +98,12 @@
 			</plugin>
 		</plugins>
 	</build>
+
+	<distributionManagement>
+		<repository>
+			<id>nexus</id>
+			<url>https://nexus.ocrespo.com/repository/maven/</url>
+		</repository>
+	</distributionManagement>
 
 </project>
