--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,10 +51,10 @@ jobs:
       - name: Build with Maven
         run: mvn -B package --file pom.xml
 
-      - name: Update .m2
+      - name: Update .m2 for Nexus Deployment
         run: |
           rm -f ~/.m2/settings.xml
-          cat <<EOF > ~/.m2/settings.xml
+          cat > ~/.m2/settings.xml <<EOF
           <settings>
             <servers>
               <server>
@@ -64,7 +64,7 @@ jobs:
               </server>
             </servers>
           </settings>
-          EOF          
+          EOF        
 
       - name: Upload Artifact to Nexus
         env:
