--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -41,6 +41,7 @@ jobs:
             </mirrors>
           </settings>
           EOF
+          cp ~/.m2/settings.xml .
 
       - name: Build with Maven
         run: mvn -B package --file pom.xml
